cluster/apps/default/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  labels:
    helm.sh/chart: syncthing-3.0.1
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/version: "1.17.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8384
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
