cluster/apps/default/syncthing/syncthing-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-discovery
  labels:
    helm.sh/chart: syncthing-3.0.1
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/version: "1.17.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: NodePort
  ports:
  - port: 21027
    targetPort: 21027
    protocol: UDP
    name: discovery
  selector:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
