cluster/apps/default/syncthing/syncthing-listen.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-listen
  labels:
    helm.sh/chart: syncthing-3.0.1
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/version: "1.17.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: NodePort
  ports:
  - port: 22000
    targetPort: 22000
    protocol: TCP
    name: listen
  selector:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
